--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 
         <ul id="unorder"></ul>
     </div>
+    <canvas id="myChart"></canvas>
+
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
     <script src="app.js"></script>
 </body>
 </html>
