--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <img src="" alt="" id="leftImg">
         <img src="" alt="" id="middleImg">
         <img src="" alt="" id="rightImg">
-
+<button type="submit" id="submit">View Result</button>
         <ul id="unorder"></ul>
     </div>
     <canvas id="myChart"></canvas>
